# Recall

./: .gitignore  ACCESSIBILITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RECALL_AUDIT.md  ROADMAP.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pr-body.md  recall_prd.md  screenshot-window.ps1  screenshot.ps1  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.hermes/plans/: 2026-06-12_recall_rewrite.md
docs/: card-formatting.md  getting-started.md  manual-qa.md
e2e/: card-crud.spec.ts  core-loop.spec.ts  settings.spec.ts  smoke.spec.ts
scripts/: take-screenshots.js
src/: App.tsx  index.css  jsx.d.ts  main.tsx  test-setup.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anki_import.rs  db_atomic.rs  lib.rs  main.rs
src-tauri/tests/: large_deck_benchmark.rs
src/components/: RichCard.tsx  activity-heatmap.tsx  anki-import-dialog.tsx  app-shell.tsx  bulk-add-dialog.tsx  card-browser.tsx  card-dialog.tsx  command-palette.tsx  confirm-action.tsx  csv-import-dialog.tsx  custom-study-dialog.tsx  daily-goal.tsx  dashboard.tsx  deck-detail.tsx  deck-dialog.tsx  error-boundary.tsx  focus-timer.tsx  image-occlusion-editor.tsx  (+20 more)
(+111 files in other folders)
