[package]
name = "recall"
version = "1.0.16"
description = "A minimal, local-first flashcard app for focused learning."
authors = ["Madlezz"]
edition = "2021"

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "4"
tempfile = "3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-updater = "2"
